# FinalStorm

./: .gitignore  CMakeLists.txt  README.md  Shared.xcconfig  compile_shaders.sh  generate_xcodeproj.sh  iOS.xcconfig  macOS.xcconfig  setup_build.sh  setup_xcode_project.sh  verify_structure.sh
FinalStorm/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  main.m
FinalStorm.xcodeproj/: project.pbxproj
FinalStorm.xcodeproj/xcuserdata/wenyan.xcuserdatad/xcschemes/: xcschememanagement.plist
FinalStorm/Base.lproj/: Main.storyboard
MetalRenderer/: MetalRenderer.h  MetalRenderer.mm  Shaders.metal
Shared/Core/Audio/: AudioEngine.cpp
Shared/Core/Input/: InteractionManager.h
Shared/Core/Math/: Math.cpp  Math.h  Transform.h
Shared/Core/Networking/: FinalverseClient.cpp  FinalverseClient.h  MessageProtocol.cpp
Shared/Core/Services/: DatabaseViz.cpp  DatabaseViz.h  ServiceEntity.cpp  ServiceEntity.h  ServiceRepresentation.h  WebServerViz.h
Shared/Core/Visualization/: DataVisualizer.h
Shared/Core/World/: Entity.cpp  Entity.h  WorldManager.cpp  WorldManager.h
Shared/Renderer/: Renderer.h
Shared/SceneGraph/: SceneNode.cpp  SceneNode.h  ServiceNode.cpp  ServiceNode.h  ServiceVisualizations.h
Shared/UI3D/: HolographicDisplay.h  InteractiveOrb.h  Panel.h
assets/: README.txt
docs/: API.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md
iOS/: ARMode.h  AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.mm  Info.plist  main.m
include/FinalStorm/: FinalStorm.h
include/FinalStorm/Core/: Math.h  Transform.h
include/FinalStorm/Networking/: FinalverseClient.h  NetworkClient.h
macOS/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.mm  Info.plist  main.m
macOS/Renderer/: MetalRenderer.h  MetalRenderer.mm  MetalShaderTypes.h  Shaders.metal
scripts/: build_setup.sh  check_structure.sh  compile_shaders.sh  gen_xcode.sh  xcodegen.sh
shaders/: Common.metal  Core.metal  Environment.metal  FinalStorm.metal  FirstScene.metal  Particles.metal  PostProcess.metal  Service.metal  UI.metal
shaders/compiled/: Common.air  Common.metallib  Core.air  Core.metallib  Environment.air  Environment.metallib  FinalStorm.metallib  FirstScene.air  FirstScene.metallib  Particles.air  Particles.metallib  PostProcess.air  PostProcess.metallib  Service.air  Service.metallib  UI.air  UI.metallib
src/: FinalStormApp.cpp  FinalStormApp.h  FirstScene.h  SceneLoader.h  main.cpp
src/Core/: Engine.cpp  Logger.cpp  MathTypes.h  ResourceManager.h
src/Core/Audio/: AudioEngine.cpp  AudioEngine.h  SpatialAudioSystem.cpp  SpatialAudioSystem.h
src/Core/Environment/: EnvironmentController.cpp  EnvironmentController.h
src/Core/Input/: InputManager.h  InputTypes.h  InteractionManager.cpp  InteractionManager.h
src/Core/Math/: Camera.cpp  Camera.h  Constants.h  Math.cpp  Math.h  MathTypes.h  Transform.cpp  Transform.h
src/Core/Networking/: FinalverseClient.cpp  FinalverseClient.h  MessageProtocol.cpp  MessageProtocol.h  NetworkClient.cpp  NetworkClient.h
src/Core/Services/: ServiceRepresentation.h  WebServerViz.cpp
src/Core/Visualization/: DataVisualizer.cpp  DataVisualizer.h
src/Core/World/: Entity.cpp  Entity.h  SceneManager.cpp  SceneManager.h  WorldManager.cpp  WorldManager.h
src/Environment/: EnvironmentController.cpp  EnvironmentController.h  GridMesh.h  Skybox.h
src/Network/: FinalverseClient.cpp  FinalverseClient.h  MessageProtocol.cpp  MessageProtocol.h  NetworkClient.cpp  NetworkClient.h
src/Platform/Android/: README.md
src/Platform/Linux/: README.md
src/Platform/Windows/: README.md
src/Platform/iOS/: ARMode.h  ARMode.mm  AppDelegate.h  AppDelegate.mm  GameViewController.h  GameViewController.mm  main.mm
src/Platform/macOS/: AppDelegate.h  GameViewController.h  GameViewController.mm  main.mm
src/Renderer/: Camera.h  Light.h  Material.h  Mesh.h  Renderer.h
src/Renderer/Metal/: MetalRenderer.h  MetalRenderer.hpp  MetalRenderer.mm
src/Rendering/: Camera.h  Light.h  Material.h  Mesh.h  RenderContext.h  Renderer.h  ShaderTypes.h
src/Rendering/Metal/: MetalMesh.h  MetalMesh.mm  MetalRenderContext.h  MetalRenderContext.mm  MetalRenderer.h  MetalRenderer.mm  MetalTexture.h  MetalTexture.mm
src/Scene/: CameraController.cpp  CameraController.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  ServiceVisualizations.cpp  ServiceVisualizations.h
src/Scene/Scenes/: CentralNexus.cpp  CentralNexus.h  FirstScene.cpp  FirstScene.h  InteractiveGuide.cpp  InteractiveGuide.h  ServiceRing.cpp  ServiceRing.h  WelcomeSequence.cpp  WelcomeSequence.h
src/Services/: ServiceEntity.cpp  ServiceEntity.h  ServiceFactory.cpp  ServiceFactory.h  ServiceMetrics.cpp  ServiceMetrics.h  ServiceNode.cpp  ServiceNode.h  ServiceRepresentation.h  ServiceVisualizations.cpp  ServiceVisualizations.h
src/Services/Components/: BeamMesh.cpp  ConnectionBeam.cpp  ConnectionBeam.h  ConnectionBeamRendering.cpp  EnergyRing.cpp  EnergyRing.h  ParticleEmitter.cpp  ParticleEmitter.h
src/Services/Visual/: AIServiceViz.cpp  APIGatewayViz.cpp  AudioServiceViz.cpp  CommunityViz.cpp  DatabaseViz.cpp  WebServerViz.cpp  WebServerViz.h  WorldEngineViz.cpp
src/Services/Visualizations/: AIServiceViz.cpp  APIGatewayViz.cpp  AudioServiceViz.cpp  AudioServiceViz.h  CommunityViz.cpp  CommunityViz.h  DatabaseViz.cpp  DatabaseViz.h  WebServerViz.cpp  WorldEngineViz.cpp
src/UI/: HolographicDisplay.cpp  HolographicDisplay.h  InteractiveOrb.cpp  InteractiveOrb.h  Panel.cpp  Panel.h  ServiceDiscoveryUI.cpp  ServiceDiscoveryUI.h  UI3DPanel.cpp  UI3DPanel.h
src/Visual/: AIServiceViz.cpp  AIServiceViz.h  APIGatewayViz.cpp  APIGatewayViz.h  AudioServiceViz.cpp  CommunityViz.cpp  DataVisualizer.cpp  DatabaseViz.cpp  WebServerViz.cpp  WorldEngineViz.cpp  WorldEngineViz.h
src/Visualization/: DataVisualizer.cpp  DataVisualizer.h
src/World/: Entity.cpp  Entity.h  WorldManager.cpp  WorldManager.h
